Fix cursors for child windows.

NSTrackingCursorUpdate only triggers the -cursorUpdate: message
for key windows. If MacViews tries to set a cursor for a non-
key window that is the child of a key window, set the cursor
manually.

BUG=851834

Change-Id: I91fe5eb1bc4880d847799e2e1f3bb0a1eb140d5a
Reviewed-on: https://chromium-review.googlesource.com/1135718
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575279}
Former-commit-id: 2da5a6dc141b85cf9c8734a57bf1fba4506039c2